--- a/chipset.html
+++ b/chipset.html
@@ -52,7 +52,7 @@
     <p><img src="heatdistribution.JPG" alt="heatdistribution" width="50%" margin-left="30%"></p>
 
     <p>The heat distribution shows that heat generated from the center of the device conducting in all directions thus fully dissipating moments before reaching the edge of simulated motherboard.</p>
-    <p>It is fascinating that heat is dissipated significantly by the outer cover yet conducts easily through the PWB layers. This however is likely due to the significant change in temperature between the center and outer edges which further confirms that the stresses shown could lead to fatigue damage and reliability issues.</p>
+    <p>It is fascinating that heat dissipates significantly by the outer cover yet conducts easily through the PWB layers. This however is likely due to the significant change in temperature between the center and outer edges which further confirms that the stresses shown could lead to fatigue damage and reliability issues.</p>
 
     <h3>Solution</h3>
 
