--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           I was born in Japan and spent my first 16 years in Indonesia before I moved to the United States. In May 2023, I completed my Bachelor's degree in Mechanical Engineering from University of Maryland. Most of my experiences come from academic tasks and personal initiatives, such as creating my own desktop system. Some of these projects can be viewed below, while I could only provide brief informations, I would be glad to provide additional insights if required.
         </p>
         <p>
-          I took interest in math early in my school days, and since I have a curious personality, I become fascinated by technology and always looking to contribute for the better. Currently, I am looking for opportunities to apply and expand these skills. To learn more about my experience and journey, visit my<a href = "https://www.linkedin.com/in/rayhan-ajisaka/">LinkedIn</a>
+          I took interest in math early in my school days, and since I have a curious personality, it shaped me into an enthusiastic mechanical engineer with advanced understanding in vehicle design, product development, project management, design analysis and electronic integraton. To learn more about my experience and journey, visit my<a href = "https://www.linkedin.com/in/rayhan-ajisaka/">LinkedIn</a>
         </p>
         <p><a href="resume.html">Experience and Skills</a></p>
     </section>
