--- a/Capstone.html
+++ b/Capstone.html
@@ -67,7 +67,7 @@
 
         <p>This capstone project has not only provided us with invaluable technical experience but also honed our project management and teamwork skills. Despite numerous challenges, our team persisted, resulting in a successful and functional prototype.</p>
 
-        <p>Having to work with such lovely client made us remember why we wanted to be engineers in the first place, is has been confirmed that another capstone team would further improve our prototype design.</p>
+        <p>Having to work with such lovely client made us remember why we wanted to be engineers in the first place, it has been confirmed that another capstone team would further improve our prototype design.</p>
         <p>I am truly grateful to our instructors and VME for entrusting this project to our team. This project was a significant step in our engineering journey, and we look forward to bringing more innovative solutions to real-world challenges.</p>
             
         <p><img src="Team.jpg" alt="Team" width="45%" margin-left="30%"></p>
